--- a/exercises/zad_4/zad_4.ipynb
+++ b/exercises/zad_4/zad_4.ipynb
@@ -25,18 +25,39 @@
     " - wykonywał wszystkie wcześniejsze zadania, ale z wykorzystaniem pętli `for`\n",
     " - skrypt będzie podawał informację ile jest gwiazd na niebie północnym , a ile na niebie południowym\n",
     " - dodatkowo oprócz histogramu typów widmowych, skrypt będzie rysował histogram jasności - tutaj będą możliwe różne opcje:\n",
-    "  - podanie granicznej jasności do rysowania histogramu\n",
+    "  - podanie granicznej jasności do rysowania histogramu (ograniczenie największej jasności, w przypadku gdy podana wartość będzie większa niż największa jasność w tabeli, granicą ma być ta druga)\n",
     "  - podanie ilości przedziałów do rysowania histogramu\n",
-    "  - wybranie czy ma narysować dla nieba północnego czy południowego (jeśli niepodane, to narysuje dla całego nieba)\n",
-    " - jeżeli użytkownik uruchomi skrypt tylko za pomocą jego nazwy (bez żadnych argumentów), ma się wyświetlić sposób użycia programu"
+    "  - wybranie czy ma narysować dla nieba północnego czy południowego\n",
+    " - wypisze ilość przedziałów w histogramie oraz rozmiar przedziałów\n",
+    " - jeżeli użytkownik uruchomi skrypt z ilością argumentów mniejszą niż wymagana, ma się wyświetlić sposób użycia programu\n",
+    " \n",
+    " __[DODATKOWE]__ Możecie spróbować \"ubarwić\" wypisywane dane, za pomocą komendy `tput`."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Działanie skryptu gdy nie podana została wystarczająca ilość argumentów:<br>\n",
+    "![SegmentLocal](noarg.gif \"segment\")\n",
+    "\n",
+    "Przykładowe uruchomienie skryptu z argumentami: $\\phi$= 51.1$^{\\circ}$ N, 15 przedziałów, limit = 5 mag, niebo południowe:<br>\n",
+    "![SegmentLocal](zad4.gif \"segment\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__[UWAGA]__ W kolumnie z janościami obiektów, mogą wystąpić obiekty niegwiazdowe. W pliku `ReadMe` jest opisane w jaki sposób zostały zaznaczone. Nie powinny być uwzględnione w rysowaniu histogramu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### __[WSKAZÓWKA]__  Sprawdźcie działanie zmiennej specjalnej w `bash`-u -> `$#`"
+   ]
   },
   {
    "cell_type": "markdown",
