--- a/7_for_if.ipynb
+++ b/7_for_if.ipynb
@@ -286,6 +286,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## __[UWAGA] Komenda `awk` również posiada instrukcje warunkowe, może się to okazać bardzo przydatne.__\n",
+    "### Składnia:\n",
+    "```bash\n",
+    "awk '{ if ( warunek ) {działanie} else {działanie} }'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7.3 Pętla `for`"
    ]
   },
