--- a/exercises/zad_4/zad_4.ipynb
+++ b/exercises/zad_4/zad_4.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Zadanie nr 4 - Wykorzystanie pętli i intrukcji warunkowych do zadania nr 3"
+    "# Zadanie nr 4 - Wykorzystanie pętli i instrukcji warunkowych do zadania nr 3"
    ]
   },
   {
