--- a/4_duze_pliki_tekstowe.ipynb
+++ b/4_duze_pliki_tekstowe.ipynb
@@ -651,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![SegmentLocal](tty.gif \"segment\")"
+    "![SegmentLocal](witaj.gif \"segment\")"
    ]
   },
   {
@@ -676,5 +676,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
