--- a/8_gnuplot.ipynb
+++ b/8_gnuplot.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8. Gnuplot - narzędzie do wizualizacji danych"
+    "# 8. Gnuplot - narzędzie do wizualizacji danych: część 1."
    ]
   },
   {
