--- a/exercises/zad_5/zad_5.ipynb
+++ b/exercises/zad_5/zad_5.ipynb
@@ -21,12 +21,12 @@
     "### __[UWAGA]__ Pamiętajcie o komentowaniu skryptu, za pomocą znaku `#` po którym wpisujcie własnymi słowami co dana komenda robi. W ten sposób będę wiedział, że rozumiecie napisany skrypt.\n",
     " \n",
     " Zadanie polega na napisaniu skryptu w `bash`-u, który będzie wywoływał skrypt napisany w `gnuplot`-cie, który:\n",
-    "   - będzie  liczył dopasowanie funkcji do danych w pliku [data.txt](https://raw.githubusercontent.com/plokoon12/BASH-notebooks/master/dane.txt) (kliknij, żeby pobrać). Kolumny to kolejno: sztuczne dane, praw\n",
+    "   - będzie  liczył dopasowanie funkcji do danych w pliku [data.txt](https://raw.githubusercontent.com/plokoon12/BASH-notebooks/master/dane.txt) (kliknij, żeby pobrać). Kolumny to kolejno: sztuczne dane x, oryginalne sztuczne dane y, sztuczne dane y\n",
     "   - zapisze dwa obrazki, każdy w trybie `multiplot`:\n",
     "       - dane z pliku `dane.txt` z dopasowaniem oraz różnicę między dopasowaniem a prawdziwą funkcją. Prawdziwa funkcja ma postać: $-0.16x^2+0.7x-9$\n",
     "       - dwa histogramy z zadania nr 4 -> wykorzystajcie wasze skrypty, żeby stworzyć sobie dane do histogramów\n",
     "       \n",
-    " #### __Zadbajcie o czytelność i estetykę wykresów. Pozmieniajcie kolory, punkty, rozmiary i czcionki na wykresie.<br> Do znalezienia samemu: jak zmienić rozmiary wykresów w__ `multiplot`__-cie oraz modyfikacje znaczników (tick)__."
+    " #### __Zadbajcie o czytelność i estetykę wykresów. Pozmieniajcie kolory, punkty, rozmiary i czcionki na wykresie.__ <br> Do znalezienia samemu: jak zmienić rozmiary wykresów w__ `multiplot`__-cie oraz modyfikacje znaczników (tick)__."
    ]
   },
   {
