--- a/exercises/zad_5/zad_5.ipynb
+++ b/exercises/zad_5/zad_5.ipynb
@@ -26,17 +26,18 @@
     "       - dane z pliku `dane.txt` z dopasowaniem oraz różnicę między dopasowaniem a prawdziwą funkcją. Prawdziwa funkcja ma postać: $-0.16x^2+0.7x-9$\n",
     "       - dwa histogramy z zadania nr 4 -> wykorzystajcie wasze skrypty, żeby stworzyć sobie dane do histogramów\n",
     "       \n",
-    " #### __Zadbajcie o czytelność i estetykę wykresów. Pozmieniajcie kolory, punkty, rozmiary i czcionki na wykresie.__ <br> Do znalezienia samemu: jak zmienić rozmiary wykresów w__ `multiplot`__-cie oraz modyfikacje znaczników (tick)__."
+    "#### __Zadbajcie o czytelność i estetykę wykresów. Pozmieniajcie kolory, punkty, rozmiary i czcionki na wykresie.__ <br>\n",
+    "#### __Do znalezienia samemu: jak zmienić rozmiary wykresów w__ `multiplot`__-cie oraz modyfikacje znaczników (tick)__."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Przykładowe dwa obrazki powinny wyglądać tak:<br>\n",
-    "### __1) Dopasowanie (przykład dla wielomianu trzeciego stopnia)__<br>\n",
+    "## __Przykładowe dwa obrazki powinny wyglądać tak:__<br>\n",
+    "### 1) Dopasowanie (przykład dla wielomianu trzeciego stopnia)<br>\n",
     "![title](fit.png)<br>\n",
-    "### __2) Histogramy__<br>\n",
+    "### 2) Histogramy<br>\n",
     "![title](hist.png)"
    ]
   },
