--- a/exercises/zad_2/zad_2-Copy1.ipynb
+++ b/exercises/zad_2/zad_2-Copy1.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![SegmentLocal](zad2.gif \"segment\")\n",
+    "![SegmentLocal](zad2.png \"segment\")\n",
     "\n",
     "Zostały stworzone pliki `counts_the.dat` oraz `sub_bd_dr.txt`"
    ]
@@ -138,5 +138,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
