--- a/exercises/zad_3/zad_3-Copy1.ipynb
+++ b/exercises/zad_3/zad_3-Copy1.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![SegmentLocal](zad3.gif \"segment\")\n",
+    "![SegmentLocal](zad3.png \"segment\")\n",
     "\n",
     "Zostały stworzone pliki: `hd.dat` - zawierający katalog z 6 kolumnami oraz `circumpolar_51.1.dat` - zawierający gwiazdy niezachodzące na szerokości geograficznej $\\phi$= 51.1$^{\\circ}$ N"
    ]
