--- a/exercises/zad_4/zad_4-Copy1.ipynb
+++ b/exercises/zad_4/zad_4-Copy1.ipynb
@@ -39,10 +39,10 @@
    "metadata": {},
    "source": [
     "Działanie skryptu gdy nie podana została wystarczająca ilość argumentów:<br>\n",
-    "![SegmentLocal](noarg.gif \"segment\")\n",
+    "![SegmentLocal](zad4.png \"segment\")\n",
     "\n",
     "Przykładowe uruchomienie skryptu z argumentami: $\\phi$= 51.1$^{\\circ}$ N, 15 przedziałów, limit = 5 mag, niebo południowe:<br>\n",
-    "![SegmentLocal](zad4.gif \"segment\")"
+    "![SegmentLocal](zad4_2.png \"segment\")"
    ]
   },
   {
