--- a/0_wstep.ipynb
+++ b/0_wstep.ipynb
@@ -280,13 +280,13 @@
     "   \n",
     "    ~/.bash_aliases - umieszczane są w nim aliasy poleceń (nie jest wymagany i może go nie być)\n",
     "    ~/.bash_history - zawiera historię wpisywanych poleceń\n",
-    "    ~/.bash_logout - wykona polecenia w nim zawarte podczas wylogowania z systemu\n",
+    "    ~/.bash_logout - wykona polecenia w nim zawarte podczas wyjścia z powłoki\n",
     "    ~/.bashrc - główny plik konfiguracyjny\n",
     "\n",
     "W ogólności może być więcej takich plików, np:\n",
     "\n",
-    "    ~/.bash_profile - wykona nasze polecenia podczas logowania do systemu\n",
-    "    ~./bash_login - również wykona nasze polecenia podczas logowania do systemu, ale w drugiej kolejności\n",
+    "    ~/.bash_profile - wykona nasze polecenia po otwarcia powłoki\n",
+    "    ~./bash_login - również wykona nasze polecenia po otwarciu powłoki, ale w drugiej kolejności\n",
     "    \n",
     "\n"
    ]
