--- a/8_for_if_awk.ipynb
+++ b/8_for_if_awk.ipynb
@@ -183,26 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.2 Instrukcja warunkowa - jaki warunek?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Próbując zdefiniować warunek w `bash`-u trzeba wiedzieć, że istnieją różne sposoby jego formułowania. Można podzielić je na 3 typy w zależności od konstrukcji, a każdy z nich ma również swoje podtypy:\n",
-    " - za pomocą pojedynczych nawiasów kwadratowych `[ warunek ]`\n",
-    "  - działające na plikach\n",
-    "  - działające na ciągach znaków\n",
-    "  - działające na liczbach\n",
-    " - za pomocą podwójnych nawiasów kwadratowych  `[[ warunek ]]` - rozszerza/zmienia możliwości warunku w pojednyczych nawiasach kwadratowych\n",
-    "  - działające na plikach, ale np. plik `*.bash` rozpozna dosłownie jako `*.bash` a nie wszystkie pliki z roszerzeniem `.bash`\n",
-    "  - działające na ciągach znaków, ale np. umożliwia stosowanie wyrażeń regularnych\n",
-    "  - działające na liczbach, ale np. dopuszcza stosowanie operatorów logicznych do łączenia warunków, np. `&&`\n",
-    " - za pomocą podwójnych nawiasów zwykłych `(( warunek ))`\n",
-    " \n",
-    " Jest tego dużo i omówię tylko kilka przykładów, natomiast dobre opracowanie znajduje się na stronie do której link podaję poniżej.<br>\n",
-    " https://linuxacademy.com/blog/linux/conditions-in-bash-scripting-if-statements/\n"
+    "## 8.2 Instrukcja warunkowa - regex"
    ]
   },
   {
