--- a/Instrukcja_WSL.ipynb
+++ b/Instrukcja_WSL.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `bash` jest powłoką systemu operacyjnego opartego na [UNIX](https://upload.wikimedia.org/wikipedia/commons/7/77/Unix_history-simple.svg) - [Linux](https://upload.wikimedia.org/wikipedia/commons/8/8c/Linux_Distribution_Timeline_Dec._2020.svg). Pełni rolę pośrednika między użytkownikiem, a samym systemem. Umożliwia sprawną pracę z plikami i innymi aplikacjami. Występuje wiele powłok systemowych np. `zsh - Z shell`, `tcsh - The TENEX C shell`, `sh - The Bourne shell` i jego ulepszona wersja `bash - The Bourne Again shell ` . Dla Windowsa również występują powłoki: `cmd.exe` oraz `Windows PowerShell`. Aby wywołać powłokę np. bash w Windowsie można użyć narzędzia WSL."
+    "### `bash` jest powłoką systemu operacyjnego opartego na [UNIX](https://upload.wikimedia.org/wikipedia/commons/7/77/Unix_history-simple.svg) - [Linux](https://upload.wikimedia.org/wikipedia/commons/8/8c/Linux_Distribution_Timeline_Dec._2020.svg). Pełni rolę pośrednika między użytkownikiem, a samym systemem. Umożliwia sprawną pracę z plikami i innymi aplikacjami. Występuje wiele powłok systemowych np. `zsh - Z shell`, `tcsh - The TENEX C shell`, `sh - The Bourne shell` i jego ulepszona wersja `bash - The Bourne Again shell ` . Dla Windowsa również występują powłoki: `cmd.exe` oraz `Windows PowerShell`. Aby wywołać w Windowsie powłokę np. bash można użyć narzędzia WSL."
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Żeby włączyć tę funkcję należy wyszukać usługę: Włącz lub wyłącz funkcje systemu Windows."
+    "Żeby włączyć tę funkcję należy wyszukać usługę: **Włącz lub wyłącz funkcje systemu Windows.**"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Następnie trzeba zaznaczyć Podsystem Windows dla systemu Linux"
+    "Następnie trzeba zaznaczyć **Podsystem Windows dla systemu Linux**"
    ]
   },
   {
@@ -103,20 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Anaconda\n",
-    "\n",
-    "https://repo.anaconda.com/archive/Anaconda3-2021.05-Linux-x86_64.sh\n",
-    "\n",
-    "`wget https://repo.anaconda.com/archive/Anaconda3-2021.05-Linux-x86_64.sh`\n",
-    "\n",
-    "`bash Anaconda3-2021.05-Linux-x86_64.sh`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Środowisko graficzne - X Server"
+    "## 3. Środowisko graficzne - X Server"
    ]
   },
   {
